--- a/00_einl/fehlerr.tex
+++ b/00_einl/fehlerr.tex
@@ -10,7 +10,10 @@ Messdaten\index{Auswertung} dargelegt werden, soweit sie f"ur
 dieses Praktikum wichtig sind. F"ur eine genauere Betrachtung sei
 auf die Spezialliteratur
 %\cite{beving,bron,npp,kamke,physmess,lichten,tbstat,tbnum,taylor,messunsicher}
-verwiesen.
+verwiesen.\\
+
+\noindent
+Dieser Abschnitt ist der Praktikumsanleitung für Physiker entnommen. Inhaltlich sollte er größtenteils mit dem vorherigen Abschnitt übereinstimmen, führt aber einige der Konzepte in größerer Tiefe ein.
 
 \section{Vorbemerkung}
 
