--- a/Versuch_1-2/Versuch-2.tex
+++ b/Versuch_1-2/Versuch-2.tex
@@ -1,7 +1,8 @@
-\chapter{Drehschwingungen}
+\chapter{Trägheitsmoment}
 \label{v:2}
 
-In diesem Versuch lernen Sie die Grundlagen der Rotation starrer (nicht verformbarer) Körper kennen.
+In diesem Versuch lernen Sie die Grundlagen der Rotation starrer (nicht verformbarer) Körper kennen.\\
+Zur Vorbereitung ist es nützlich, sich den theoretischen Hintergrund von Versuch \ref{v:1} anzuschauen, wenn Sie diesen Versuch noch nicht gemacht haben.
 % Zusätzlich: Schwingen mit angezogenen Armen beim Laufen, um Rotationsenergie zu reduzieren,
 % Pirouette beim Eiskunstlauf
 % --> Haben wir einen Probekörper an einer langen Achse?
