--- a/Versuch_13-14/Versuch-13.tex
+++ b/Versuch_13-14/Versuch-13.tex
@@ -165,17 +165,17 @@ Da bei abgeglichener Brücke $I_1 = I_2$ und $I_3 = I_4$ ist, folgt für $R_3$ G
  %
  \item Wiederholung: Definition von Strom und Spannung
  %
- \item Wiederholung: Ohm'sches Gesetz, Schaltung von Messger"aten
+ \item Wiederholung: Ohm'sches Gesetz, Schaltung von Messgeräten
  %
- \item Wie lauten die Kirchhoff'schen Gesetze? Welche Erhaltungss"atze liegen ihnen zugrunde?
+ \item Wie lauten die Kirchhoff'schen Gesetze? Welche Erhaltungssätze liegen ihnen zugrunde?
  %
- \item Wie berechnet man den Gesamtwiderstand bei Reihen- und Parallelschaltungen von Widerst"anden?
+ \item Wie berechnet man den Gesamtwiderstand bei Reihen- und Parallelschaltungen von Widerständen?
  %
- \item Was ist ein Innenwiderstand?
+ %\item Was ist ein Innenwiderstand?
  %
- \item Wie funktioniert die Spannungsteilerschaltung (Schaltskizze und Erkl"arung)?
+ \item Wie funktioniert die Spannungsteilerschaltung (Schaltskizze und Erklärung)?
  %
- \item Wie funktioniert die Wheatstone'sche Br"uckenschaltung (Schaltskizze und Erkl"arung)? Was kann man mit ihr messen?
+ \item Wie funktioniert die Wheatstone'sche Brückenschaltung (Schaltskizze und Erklärung)? Was kann man mit ihr messen?
 \end{enumerate}
 
 %------------------------------------------------
