--- a/Versuch_13-14/Versuch-14.tex
+++ b/Versuch_13-14/Versuch-14.tex
@@ -70,7 +70,7 @@ Diese Art der Diffusion, die durch einen Konzentrationsgradienten getrieben wird
  %
  \item Welcher Effekt wird als Diffusion bezeichnet?
  %
- \item Was ist stationäre bzw. nichtstationäre Diffusion?
+ %\item Was ist stationäre bzw. nichtstationäre Diffusion?
  %
  \item Was ist die Bedeutung der Diffusionskonstanten D (Diffusionsgleichung für stationäre Diffusion) ?
  %
