--- a/Versuch_3-4/Versuch-3.tex
+++ b/Versuch_3-4/Versuch-3.tex
@@ -116,7 +116,9 @@ Jede der Kapillaren wird mit der Einrichtung im Raum gesäubert. Dazu gehören a
  %
 \end{enumerate}
 %
-\textit{TIPP: Da das Praktikum nur 2 Messapparate bietet, kann man sich zum Beispiel auch schon mal um die nachfolgenden Versuchsteile kümmern.}
+\begin{important}
+	Da das Praktikum nur 2 Messapparate bietet, kann man sich zum Beispiel auch schon mal um die nachfolgenden Versuchsteile kümmern.
+\end{important}
 %
 \begin{enumerate} \setcounter{enumi}{1}
  \item Wiegen Sie das leere Auffanggefäß und die Probekörper (jeweils einmal). 
@@ -126,7 +128,9 @@ Jede der Kapillaren wird mit der Einrichtung im Raum gesäubert. Dazu gehören a
  %
 \end{enumerate}
 %
-\textit{TIPP: In den nachfolgenden Versuchsteilen (3 \& 4) geht es viel schneller wenn man jeweils die Versuche Steighöhen messen und Mohr'sche Waage hintereinander mit einer Flüssigkeit durchführt.}\\
+\begin{important}
+	In den nachfolgenden Versuchsteilen (3 \& 4) geht es viel schneller wenn man jeweils die Versuche Steighöhen messen und Mohr'sche Waage hintereinander mit einer Flüssigkeit durchführt.
+\end{important}
 
 Hier soll mit drei verschiedenen Flüssigkeiten gemessen werden: Wasser, Äthylenglykol, Methylalkohol. Die letzten beiden befinden sich im Eingangsbereich des Versuchsraums.
 %
