--- a/Versuch_3-4/Versuch-4.tex
+++ b/Versuch_3-4/Versuch-4.tex
@@ -50,21 +50,21 @@ Ist die Viskosität unabhängig von der Geschwindigkeit $v$, so spricht man von 
 
 \begin{enumerate}
  %
- \item Was soll heute im Praktikum gemessen werden? Warum?
+% \item Was soll heute im Praktikum gemessen werden? Warum?
  %
  \item Wie ist der Druck definiert? (Einheiten)
  %
- \item Was heißt hydrostatischer Druck?
+ %\item Was heißt hydrostatischer Druck?
  %
  \item Welche Strömungstypen gibt es?
  %
- \item Was ist Viskosität? Wodurch entsteht sie?
+ \item Was ist Viskosität? Wodurch entsteht sie? Welche Einheit hat sie?
  %
- \item Welche Einheit hat die Viskosität?
+ %\item Welche Einheit hat die Viskosität?
  %
  \item Wie verhält sich die Viskosität bei steigender Temperatur?
  %
- \item Unter welchen Vorrausetzungen gilt das Hagen-Poiseuillesche Gesetz?
+ %\item Unter welchen Voraussetzungen gilt das Hagen-Poiseuillesche Gesetz?
  %
  \item Wie lautet das Hagen-Poiseuillesche Gesetz?
  %
