Versuche und Räume für WiSe 2016/17 eingetragen

--- a/00_einl/versuche.tex
+++ b/00_einl/versuche.tex
@@ -5,30 +5,30 @@
 \begin{table}[h!]
  \centering
  \begin{tabular}{rll}
- \toprule
+ \hline
  Versuch & Thema & Raum\\
- \midrule
- 1 & Stoss & A.02.105\\
- 2 & Drehschwingung & A.02.105\\ 
- 3 & Kapilarit"at & A.02.102 \\ 
- 4 & Innere Reibung von Fl"ussigkeiten & A.02.102 \\ 
- 5 & Spezifische W"armekapazit"at & A.02.102 \\ 
- 6 & Spezifische W"armekapazit"at von Luft & A.01.102 \\ 
- 7 & Linsengesetze & A.01.104 \\ 
- 8 & Mikroskop & A.02.107 \\ 
- 9 & Brechungsindex von Glas & A.02.108 \\ 
- 10 & Beugung am Gitter & A.02.109\\ 
- 11 & Thermoelement & A.01.102 \\ 
- 12 & Kennlinien verschiedener Leiter & A.01.109 \\ 
- 13 & Elektrische Netzwerke & A.01.117 \\ 
- 14 & Diffusion & A.01.102\\ 
- 15 & Kathodenstrahl-Oszillograph & A.01.108 \\ 
- 16 & Spule und Transformator & A.01.108 \\ 
- 17 & Solarzelle und Halbleiterdiode & A.02.106\\ 
- 18 & Transistor & A.01.117 \\ 
- 19 & K"unstliche Radioaktivit"at & A.01.116 \\ 
- 20 & Spezifische Elektronenladung & A.01.105 \\ 
- \bottomrule
+ \hline
+ 1 & Solarzelle und Halbleiterdiode & A.02.106\\ 
+ 2 & Stoß & A.02.105\\
+ 3 & Wechselstrom und R-C-Kreis & A.01.108 \\ 
+ 4 & Spule und Transformator & A.01.108 \\ 
+ 5 & Trägheitsmoment & A.02.105\\ 
+ 6 & Pohl'scher Resonator & ??? \\
+ 7 & Kapillarität und Auftrieb & A.02.102 \\ 
+ 8 & Innere Reibung von Flüssigkeiten & A.02.102 \\ 
+ 9 & Linsengesetze & A.01.104 \\ 
+ 10 & Mikroskop & A.02.107 \\ 
+ 11 & Brechungsindex von Glas & A.02.108 \\ 
+ 12 & Beugung am Gitter & A.02.108\\ 
+ 13 & Thermoelement & A.01.102 \\ 
+ 14 & Ultraschall & A.01.109\\
+ 15 & Elektrische Netzwerke & A.01.117 \\ 
+ 16 & Diffusion & A.01.102\\ 
+ 17 & Künstliche Radioaktivität & A.01.116 \\ 
+ 18 & Spezifische Elektronenladung & A.01.105 \\ 
+ 19 & Spezifische Wärmekapazität & A.02.102 \\ 
+ 20 & Spezifische Wärmekapazität von Luft & A.01.102 \\ 
+ \hline
  \end{tabular}
 \end{table}
   
