Liste der Versuche und Räume in Einleitung aufgenommen.

--- a/nf-anl2016.tex
+++ b/nf-anl2016.tex
@@ -161,6 +161,7 @@ f"ur Nebenfach Physik}
 \include{00_einl/fehler-JW}
 \include{00_einl/fehlerr}
 \include{00_einl/diagramme}
+\include{00_einl/versuche}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \cleardoublepage
