Hinweis auf Typen von Erdbebenwellen für Geophysiker hinzugefügt.

--- a/Versuch_neu_1-2/Versuch_Neu-2.tex
+++ b/Versuch_neu_1-2/Versuch_Neu-2.tex
@@ -111,6 +111,9 @@ In Festkörpern, und nur in diesen, können sich also transversale Schallwellen 
 	\label{tab:Schallgeschwindigkeiten}
 \end{table}
 
+Wie man sieht, ist die Geschwindigkeit der longitudinalen Wellen immer größer als die der transversalen. Aus diesem Grund werden in der Seismologie longitudinale Erdbebenwellen, oder \textit{Kompressionswellen}, als Primär- oder P-Wellen bezeichnet. Entsprechend gilt für transversale Wellen, oder \textit{Scherwellen}, die Bezeichnung Sekundär- oder S-Wellen.\\
+
+\noindent
 Mit Hilfe einer etwas komplizierten Rechnung, die wir hier nicht vormachen wollen, kann man zeigen, dass die Amplitude der transmittierten Transversalwelle maximal wird, wenn sie sich im Festkörper unter einem Winkel von etwa 45\degree zur Oberflächennormalen ausbreitet. Im wohlbekannten Bild der Brechung einer Welle an einer Oberfläche (s. Versuch \ref{v:9}) ist das der Ausfallswinkel nach der Brechung. Nach dem Snellius'schen Brechungsgesetz gilt dann für den Einfallswinkel $\alpha$
 \begin{equation}
 	\frac{c_{trans}}{c_0} = \frac{\sin 45\degree}{\sin \alpha}\; ,
