Hinweis auf e/m Messung durch Wiechert in die Kommentare eingefügt. Später verwenden.

--- a/Versuch_19-20/Versuch-20.tex
+++ b/Versuch_19-20/Versuch-20.tex
@@ -3,6 +3,9 @@
 
 In diesem Versuch wird die historische Messung der spezifischen Elektronenladung (fast originalgetreu) nachvollzogen. Dabei lernen Sie Techniken moderner Teilchenbeschleuniger und Massenspektrometern kennen.
 
+%%%--------Bemerkung-------------------
+%Eine der ersten Messungen der spezifischen Elektronenladung gelang Johann Emil Wiechert , der das Elektron etwa zeitgleich mit Joseph John Thompson entdeckte, der dafür den Nobelpreis erhielt. Wiechert arbeitete ab 1897 an der Universität Göttingen und erhielt hier 1898 den Ruf auf die weltweit erste Professur für Geophysik.
+
 %------------------------------------------------
 \section{Stichworte}
 %------------------------------------------------
